--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
+    "js-cookie": "^3.0.5",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
